Refactor activity management: remove redundant organization ownership validation